Agregado el tiempo en crear,editar y ver.

--- a/Sergio/Templates/rubricas/EditarRubricaAdmin.html
+++ b/Sergio/Templates/rubricas/EditarRubricaAdmin.html
@@ -179,8 +179,16 @@
 		</table>
 
 		<div class="container" >
-			<label for="usr" class="col-sm-3">Tiempo limite (minutos)</label>
-			<input type="number" class="form-control col-sm-3"></input>
+		
+			<div class="row">
+				<label for="usr" class="col-sm-3">Tiempo limite (minutos):</label>
+				<input type="number" class="form-control col-sm-1"></input>
+			</div>
+			
+			<div class="row">
+				<label for="usr" class="col-sm-3">Descuento:</label>
+				<input type="text" class="form-control col-sm-1"></input>
+			</div>
 		</div>
 
 		<br>
