--- a/Sergio/Templates/rubricas/VerRubrica.html
+++ b/Sergio/Templates/rubricas/VerRubrica.html
@@ -179,12 +179,20 @@
 		
 		</table>
 
-		<div class="container" style="display:flex">
-			<label for="usr" class="col-sm-2">Tiempo limite:</label>
-			<p>15 minutos.</p>
+		<div class="container">
+			
+			<div class="row">
+				<label class="col-sm-2">Tiempo limite:</label>
+				<p class="col-sm-2">15 minutos</p>
+			</div>
+			
+			<div class="row">
+				<label class="col-sm-2">Descuento:</label>
+				<p class="col-sm-2">1.5 Puntos</p>
+			</div>
+			
+		
 		</div>
-
-		<br>
 
 <!-- JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
