Added nav-pills to create, edit and delete.

--- a/Sergio/Templates/rubricas/EditarRubricaAdmin.html
+++ b/Sergio/Templates/rubricas/EditarRubricaAdmin.html
@@ -87,6 +87,21 @@
 
 		<br>
 		
+	<div class="container">
+
+		<ul class="nav nav-pills">
+				<li class="nav-item">
+					<a class="nav-link " href="#">Crear</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link active" href="#">Modificar</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Eliminar</a>
+				</li>
+			</ul>
+		
+		<br>
 
 		<form>
 				<div class="container form-group">
@@ -108,6 +123,8 @@
 
 			</div>
 		</form>
+
+	</div>
 
 
 	
