--- a/Sergio/Templates/rubricas/EliminarRubricaAdmin.html
+++ b/Sergio/Templates/rubricas/EliminarRubricaAdmin.html
@@ -85,6 +85,25 @@
 			</div>
 
 			<br>
+
+			<div class="container">
+
+				<ul class="nav nav-pills">
+						<li class="nav-item">
+							<a class="nav-link " href="#">Crear</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link " href="#">Modificar</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" href="#">Eliminar</a>
+						</li>
+					</ul>
+				
+				<br>
+
+			</div>
+
 	
 			<form>
 					<div class="container form-group">
