--- a/Sergio/Templates/rubricas/CrearRubricaAdmin.html
+++ b/Sergio/Templates/rubricas/CrearRubricaAdmin.html
@@ -88,6 +88,27 @@
 			</div>
 	</nav>
 
+ <br>
+
+ <ul class="nav nav-pills">
+		<li class="nav-item">
+			<a class="nav-link active" href="#">Crear</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#">Modificar</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#">Eliminar</a>
+		</li>
+	</ul>
+
+	<br>
+
+	<div class="form-group">
+		<label for="usr">Nombre:</label>
+		<input type="text" class="form-control" id="usr">
+	</div>
+
 	<br>
 	
 	<table class="table table-bordered table-hover">
