--- a/Sergio/Templates/rubricas/EliminarRubricaAdmin.html
+++ b/Sergio/Templates/rubricas/EliminarRubricaAdmin.html
@@ -2,136 +2,157 @@
 <!-- Creation Date: 02-04-2019 -->
 
 <html>
-		<head>
-				<meta charset="utf-8">
-				<meta http-equiv="X-UA-Compatible" content="IE=edge">
-				<title>fsociety</title>
-				<meta name="viewport" content="width=device-width, initial-scale=1">
-				<link rel="stylesheet" type="text/css" media="screen" href="../style.css">
-				<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-				<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-				<script src="../main.js"></script>
-		</head>
 
-	<body>
-			<div class="container">
-					<nav class="navbar navbar-expand-lg navbar-light bg-light">
-							<img src="../../img/fsociety400x400.png" weight="60" height="60" class="d-inline-block align-top" alt="">
-							<a class="navbar-brand" href="../main.html">
-									fsociety
-							</a>
-							<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-									<span class="navbar-toggler-icon"></span>
-							</button>
-							<div class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="navbarNavDropdown">
-									<ul class="navbar-nav ml-auto">
-											<li class="nav-item">
-													<a class="nav-link" href="../main.html">Inicio</a>
-											</li>
-											<li class="nav-item dropdown">
-													<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-													Secciones
-													</a>
-													<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-													<a class="dropdown-item" href="../secciones/ver-secciones.html">Ver todas</a>
-													<a class="dropdown-item" href="../secciones/admin-secciones.html">Administrar</a>
-													</div>
-											</li>
-											<li class="nav-item dropdown active">
-													<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-													Alumnos
-													</a>
-													<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-													<a class="dropdown-item" href="../alumnos/ver-alumnos.html">Ver todos</a>
-													<a class="dropdown-item" href="../alumnos/resumen-alumnos.html">Ver resumen<span class="sr-only">(current)</span></a>
-													</div>
-											</li>
-											<li class="nav-item dropdown">
-													<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-													Grupos
-													</a>
-													<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-													<a class="dropdown-item" href="../grupos/ver-grupos.html">Ver todos</a>
-													<a class="dropdown-item" href="../grupos/admin-grupos.html">Administrar</a>
-													</div>
-											</li>
-											<li class="nav-item dropdown">
-													<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-													Evaluadores
-													</a>
-													<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-													<a class="dropdown-item" href="../evaluadores/ver-evaluadores.html">Ver todos</a>
-													<a class="dropdown-item" href="../evaluadores/admin-evaluadores.html">Administrar</a>
-													</div>
-											</li>
-											<li class="nav-item dropdown">
-													<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-													Rúbricas
-													</a>
-													<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-													<a class="dropdown-item" href="../rubricas/ver-rubricas.html">Ver todas</a>
-													<a class="dropdown-item" href="../rubricas/admin-rubricas.html">Administrar</a>
-													</div>
-											</li>
-											<li class="nav-item">
-													<a class="nav-link" href="../instancias/instancias.html">Instancias</a>
-											</li>
-											<li class="nav-item">
-													<a class="nav-link" href="../evaluar/evaluar.html">Evaluar</a>
-											</li>
-									</ul>
-							</div>
-					</nav>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>fsociety</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" media="screen" href="../style.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+		integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+	<script src="../main.js"></script>
+</head>
+
+<body>
+	<div class="container">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<img src="../../img/fsociety400x400.png" weight="60" height="60" class="d-inline-block align-top" alt="">
+			<a class="navbar-brand" href="../main.html">
+				fsociety
+			</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="navbarNavDropdown">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="../main.html">Inicio</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Secciones
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="../secciones/ver-secciones.html">Ver todas</a>
+							<a class="dropdown-item" href="../secciones/admin-secciones.html">Administrar</a>
+						</div>
+					</li>
+					<li class="nav-item dropdown active">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Alumnos
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="../alumnos/ver-alumnos.html">Ver todos</a>
+							<a class="dropdown-item" href="../alumnos/resumen-alumnos.html">Ver resumen<span
+									class="sr-only">(current)</span></a>
+						</div>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Grupos
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="../grupos/ver-grupos.html">Ver todos</a>
+							<a class="dropdown-item" href="../grupos/admin-grupos.html">Administrar</a>
+						</div>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Evaluadores
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="../evaluadores/ver-evaluadores.html">Ver todos</a>
+							<a class="dropdown-item" href="../evaluadores/admin-evaluadores.html">Administrar</a>
+						</div>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Rúbricas
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="./VerRubricaAdmin.html">Ver todas</a>
+							<a class="dropdown-item" href="./EditarRubricaAdmin.html">Administrar</a>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../instancias/instancias.html">Instancias</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="../evaluar/evaluar.html">Evaluar</a>
+					</li>
+				</ul>
 			</div>
+		</nav>
+	</div>
+
+	<br>
+
+	<div class="container">
+
+		<ul class="nav nav-pills">
+			<li class="nav-item">
+				<a class="nav-link " href="./CrearRubricaAdmin.html">Crear</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link " href="./EditarRubricaAdmin.html">Modificar</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link active" href="#">Eliminar</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="./VerRubricaAdmin.html">Ver</a>
+			</li>
+		</ul>
+
+		<br>
+
+	</div>
+
+
+	<form>
+		<div class="container form-group">
+
+			<label for="sel1">Seleccione una rúbrica:</label>
+			<select class="form-control" id="rubrica">
+				<option>Seleccione una rubrica a eliminar.</option>
+				<option>Rúbrica 1</option>
+				<option>Rúbrica 2</option>
+				<option>Rúbrica 3</option>
+				<option>Rúbrica 4</option>
+			</select>
 
 			<br>
 
-			<div class="container">
+			<p style="color:red">Warning: La rúbrica sera eliminada completamente del sistema y sera imposible
+				recuperarla.</p>
 
-				<ul class="nav nav-pills">
-						<li class="nav-item">
-							<a class="nav-link " href="#">Crear</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link " href="#">Modificar</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link active" href="#">Eliminar</a>
-						</li>
-					</ul>
-				
-				<br>
+			<br>
 
-			</div>
+			<button type="button" class="btn btn-primary">Eliminar Rúbrica</button>
 
-	
-			<form>
-					<div class="container form-group">
-					
-						<label for="sel1">Seleccione una rúbrica:</label>
-						<select class="form-control" id="rubrica">
-						<option>Seleccione una rubrica a eliminar.</option>
-						<option>Rúbrica 1</option>
-						<option>Rúbrica 2</option>
-						<option>Rúbrica 3</option>
-						<option>Rúbrica 4</option>
-						</select>
-	
-						<br>
+		</div>
+	</form>
 
-						<p style="color:red">Warning: La rúbrica sera eliminada completamente del sistema y sera imposible recuperarla.</p>
+	<!-- JS -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
 
-						<br>
-	
-						<button type="button" class= "btn btn-primary">Eliminar Rúbrica</button>
-	
-				</div>
-			</form>
+</body>
 
-			<!-- JS -->
-			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-	</body>
 </html>
