--- a/Max/templates/style.css
+++ b/Max/templates/style.css
@@ -1,13 +1,10 @@
 .central-container {
     background-color:#f8f9fa;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    padding-right: 1%;
-    padding-left: 1%;
+    padding: 1%;
     margin-top: 1%;
     margin-bottom: 1%;
-    margin-right: 10%;
-    margin-left:10%;
+    margin-right: 3%;
+    margin-left:3%;
 }
 
 .hover0 {
