Overflow para hacer scroll dentro de tarjetas

--- a/Max/templates/main.html
+++ b/Max/templates/main.html
@@ -87,10 +87,11 @@
     <!-- Contenido -->
     <div class="cointainer central-container">
         <div class="row justify-content-md-center">
+            <!-- Primera carta -->
             <div class="col-sm-6">
                 <div class="card">
                     <h5 class="card-header text-center">Últimas evaluaciones</h5>
-                    <div class="card-body text-center">
+                    <div class="card-body text-center" style="max-height:300px;overflow:auto">
                             <table class="table table-sm table-responsive-sm">
                                     <thead>
                                       <tr>
@@ -104,49 +105,105 @@
                                       </tr>
                                     </thead>
                                     <tbody>
-                                      <tr>
-                                        <th scope="row">58</th>
-                                        <td><p><i class="fas fa-clock"></i> Abierta</p></button></td>
-                                        <td>CC4401-1</td>
-                                        <td>16:09</td>
-                                        <td> -- </td>
-                                        <td> Rúbrica Tarea 2 </td>
-                                        <td>
-                                            <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>  Ficha</button>
-                                            <button type="button" class="btn btn-success btn-sm"><i class="fas fa-file-export"></i> Exportar</button>
-                                        </td>
-                                      </tr>
-                                      <tr>
-                                        <th scope="row">57</th>
-                                        <td><p><i class="fas fa-check"></i> Cerrada</p></td>
-                                        <td>CC4401-2</td>
-                                        <td>16:09</td>
-                                        <td> -- </td>
-                                        <td> Rúbrica Tarea 2 </td>
-                                        <td>
-                                                <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>  Ficha</button>
+                                        <tr>
+                                            <th scope="row">58</th>
+                                            <td>
+                                                <p><i class="fas fa-clock"></i> Abierta</p></button>
+                                            </td>
+                                            <td>CC4401-1</td>
+                                            <td>16:09</td>
+                                            <td> -- </td>
+                                            <td>Tarea 4 v1.1</td>
+                                            <td>
+                                                <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i> Ficha</button>
                                                 <button type="button" class="btn btn-success btn-sm"><i class="fas fa-file-export"></i> Exportar</button>
                                             </td>
-                                      </tr>
-                                      <th scope="row">56</th>
-                                        <td><p><i class="fas fa-check"></i> Cerrada</p></td>
-                                        <td>CC4401-2</td>
-                                        <td>16:09</td>
-                                        <td> -- </td>
-                                        <td> Rúbrica Tarea 2 </td>
-                                        <td>
-                                                <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>  Ficha</button>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">57</th>
+                                            <td>
+                                                <p><i class="fas fa-clock"></i> Abierta</p>
+                                            </td>
+                                            <td>CC4401-2</td>
+                                            <td>16:09</td>
+                                            <td> -- </td>
+                                            <td>Tarea 4 v1.1</td>
+                                            <td>
+                                                <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i> Ficha</button>
                                                 <button type="button" class="btn btn-success btn-sm"><i class="fas fa-file-export"></i> Exportar</button>
                                             </td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">56</th>
+                                            <td>
+                                                <p><i class="fas fa-check"></i> Cerrada</p>
+                                            </td>
+                                            <td>CC4401-2</td>
+                                            <td>16:09</td>
+                                            <td>18:01 </td>
+                                            <td>Tarea 3 v1.4</td>
+                                            <td>
+                                                <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i> Ficha</button>
+                                                <button type="button" class="btn btn-success btn-sm"><i class="fas fa-file-export"></i> Exportar</button>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">55</th>
+                                            <td>
+                                                <p><i class="fas fa-check"></i> Cerrada</p>
+                                            </td>
+                                            <td>CC4401-1</td>
+                                            <td>18:02</td>
+                                            <td>19:43 </td>
+                                            <td>Tarea 3 v1.4</td>
+                                            <td>
+                                                <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i> Ficha</button>
+                                                <button type="button" class="btn btn-success btn-sm"><i class="fas fa-file-export"></i> Exportar</button>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">54</th>
+                                            <td>
+                                                <p><i class="fas fa-check"></i> Cerrada</p>
+                                            </td>
+                                            <td>CC4401-2</td>
+                                            <td>08:35</td>
+                                            <td>10:01 </td>
+                                            <td>Tarea 2 v2.0</td>
+                                            <td>
+                                                <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i> Ficha</button>
+                                                <button type="button" class="btn btn-success btn-sm"><i class="fas fa-file-export"></i> Exportar</button>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">53</th>
+                                            <td>
+                                                <p><i class="fas fa-check"></i> Cerrada</p>
+                                            </td>
+                                            <td>CC4401-1</td>
+                                            <td>12:15</td>
+                                            <td>13:41 </td>
+                                            <td>Tarea 2 v2.0</td>
+                                            <td>
+                                                <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i> Ficha</button>
+                                                <button type="button" class="btn btn-success btn-sm"><i class="fas fa-file-export"></i> Exportar</button>
+                                            </td>
+                                        </tr>
+                                    
                                     </tbody>
                                   </table>
 
-                        <hr>
+                        
+                        
+                    </div>
+                    <div class="card-body text-center">
+                            <hr>
                         <div class="row justify-content-end">
                                 <button type="button" class="btn btn-info" style="margin:1%;"><i class="fas fa-eye"></i>  Ver todas</a>
                                     <button type="button" class="btn btn-danger" style="margin:1%;"><i class="fas fa-user-cog"></i>  Administrar</button>
                         </div>
                     </div>
+                    
                 </div>
             </div>
             <div class="col-sm-6">
