--- a/Max/templates/main.html
+++ b/Max/templates/main.html
@@ -91,7 +91,7 @@
             <div class="col-sm-6">
                 <div class="card">
                     <h5 class="card-header text-center font-weight-bold bg-primary text-white">Últimas evaluaciones</h5>
-                    <div class="card-body text-center" style="max-height:300px;overflow:auto">
+                    <div class="card-body text-center" style="max-height:245px;overflow:auto">
                         <table class="table table-sm table-responsive-sm">
                             <thead>
                                 <tr>
@@ -220,7 +220,7 @@
             <div class="col-sm-6">
                     <div class="card">
                         <h5 class="card-header text-center font-weight-bold bg-danger text-white">Cursos</h5>
-                        <div class="card-body text-center" style="max-height:300px;overflow:auto">
+                        <div class="card-body text-center" style="max-height:245px;overflow:auto">
                             <table class="table table-sm table-responsive-sm">
                                 <thead>
                                     <tr>
@@ -307,7 +307,7 @@
             <div class="col-sm-6">
                     <div class="card">
                         <h5 class="card-header text-center font-weight-bold bg-success text-white">Evaluadores</h5>
-                        <div class="card-body text-center" style="max-height:300px;overflow:auto">
+                        <div class="card-body text-center" style="max-height:245px;overflow:auto">
                             <table class="table table-sm table-responsive-sm">
                                 <thead>
                                     <tr>
@@ -410,115 +410,70 @@
             <!-- Cuarta carta -->
             <div class="col-sm-6">
                     <div class="card">
-                        <h5 class="card-header text-center font-weight-bold bg-secondary text-white">Últimas evaluaciones</h5>
-                        <div class="card-body text-center" style="max-height:300px;overflow:auto">
+                        <h5 class="card-header text-center font-weight-bold bg-secondary text-white">Rúbricas</h5>
+                        <div class="card-body text-center" style="max-height:245px;overflow:auto">
                             <table class="table table-sm table-responsive-sm">
                                 <thead>
                                     <tr>
                                         <th scope="col">ID</th>
-                                        <th scope="col">Estado</th>
-                                        <th scope="col">Curso</th>
-                                        <th scope="col">Inicio</th>
-                                        <th scope="col">Fin</th>
-                                        <th scope="col">Rúbrica</th>
+                                        <th scope="col">Nombre</th>
+                                        <th scope="col">Actualización</th>
                                         <th scope="col">Acciones</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <th scope="row">58</th>
+                                        <th scope="row">8</th>
+                                        <td>Tarea I v1.2</td>
+                                        <td>2010-08-09</td>
                                         <td>
-                                            <p><i class="fas fa-clock"></i> Abierta</p></button>
-                                        </td>
-                                        <td>CC4401-1</td>
-                                        <td>16:09</td>
-                                        <td> -- </td>
-                                        <td>Tarea 4 v1.1</td>
-                                        <td>
-                                            <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>
-                                                Ficha</button>
-                                            <button type="button" class="btn btn-success btn-sm"><i class="fas fa-file-export"></i>
-                                                Exportar</button>
+                                            <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-edit"></i>
+                                                Editar</button>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">57</th>
-                                        <td>
-                                            <p><i class="fas fa-clock"></i> Abierta</p>
-                                        </td>
-                                        <td>CC4401-2</td>
-                                        <td>16:09</td>
-                                        <td> -- </td>
-                                        <td>Tarea 4 v1.1</td>
+                                        <th scope="row">11</th>
+                                        <td>Tarea III v1.0</td>
+                                        <td>2015-12-07</td>
                                         <td>
                                             <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>
                                                 Ficha</button>
-                                            <button type="button" class="btn btn-success btn-sm"><i class="fas fa-file-export"></i>
-                                                Exportar</button>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">56</th>
-                                        <td>
-                                            <p><i class="fas fa-check"></i> Cerrada</p>
-                                        </td>
-                                        <td>CC4401-2</td>
-                                        <td>16:09</td>
-                                        <td>18:01 </td>
-                                        <td>Tarea 3 v1.4</td>
+                                        <th scope="row">1</th>
+                                        <td>Tarea IV v0.8</td>
+                                        <td>2008-03-04</td>
                                         <td>
                                             <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>
                                                 Ficha</button>
-                                            <button type="button" class="btn btn-success btn-sm"><i class="fas fa-file-export"></i>
-                                                Exportar</button>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">55</th>
-                                        <td>
-                                            <p><i class="fas fa-check"></i> Cerrada</p>
-                                        </td>
-                                        <td>CC4401-1</td>
-                                        <td>18:02</td>
-                                        <td>19:43 </td>
-                                        <td>Tarea 3 v1.4</td>
+                                        <th scope="row">2</th>
+                                        <td>Tarea V v3.2</td>
+                                        <td>2019-02-24</td>
                                         <td>
                                             <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>
                                                 Ficha</button>
-                                            <button type="button" class="btn btn-success btn-sm"><i class="fas fa-file-export"></i>
-                                                Exportar</button>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">54</th>
-                                        <td>
-                                            <p><i class="fas fa-check"></i> Cerrada</p>
-                                        </td>
-                                        <td>CC4401-2</td>
-                                        <td>08:35</td>
-                                        <td>10:01 </td>
-                                        <td>Tarea 2 v2.0</td>
+                                        <th scope="row">9</th>
+                                        <td>Tarea VII v5.9</td>
+                                        <td>2019-03-27</td>
                                         <td>
                                             <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>
                                                 Ficha</button>
-                                            <button type="button" class="btn btn-success btn-sm"><i class="fas fa-file-export"></i>
-                                                Exportar</button>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">53</th>
-                                        <td>
-                                            <p><i class="fas fa-check"></i> Cerrada</p>
-                                        </td>
-                                        <td>CC4401-1</td>
-                                        <td>12:15</td>
-                                        <td>13:41 </td>
-                                        <td>Tarea 2 v2.0</td>
+                                        <th scope="row">88</th>
+                                        <td>Tarea I v0.2</td>
+                                        <td>2006-10-11</td>
                                         <td>
                                             <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>
                                                 Ficha</button>
-                                            <button type="button" class="btn btn-success btn-sm"><i class="fas fa-file-export"></i>
-                                                Exportar</button>
                                         </td>
                                     </tr>
                 
@@ -542,7 +497,7 @@
             <div class="col-sm-6">
                     <div class="card">
                         <h5 class="card-header text-center font-weight-bold bg-info text-white">Últimas evaluaciones</h5>
-                        <div class="card-body text-center" style="max-height:300px;overflow:auto">
+                        <div class="card-body text-center" style="max-height:245px;overflow:auto">
                             <table class="table table-sm table-responsive-sm">
                                 <thead>
                                     <tr>
