--- a/Max/templates/main.html
+++ b/Max/templates/main.html
@@ -436,7 +436,7 @@
                                         <td>Tarea III v1.0</td>
                                         <td>2015-12-07</td>
                                         <td>
-                                            <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>
+                                            <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-edit"></i>
                                                 Ficha</button>
                                         </td>
                                     </tr>
@@ -445,7 +445,7 @@
                                         <td>Tarea IV v0.8</td>
                                         <td>2008-03-04</td>
                                         <td>
-                                            <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>
+                                            <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-edit"></i>
                                                 Ficha</button>
                                         </td>
                                     </tr>
@@ -454,7 +454,7 @@
                                         <td>Tarea V v3.2</td>
                                         <td>2019-02-24</td>
                                         <td>
-                                            <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>
+                                            <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-edit"></i>
                                                 Ficha</button>
                                         </td>
                                     </tr>
@@ -463,7 +463,7 @@
                                         <td>Tarea VII v5.9</td>
                                         <td>2019-03-27</td>
                                         <td>
-                                            <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>
+                                            <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-edit"></i>
                                                 Ficha</button>
                                         </td>
                                     </tr>
@@ -472,7 +472,7 @@
                                         <td>Tarea I v0.2</td>
                                         <td>2006-10-11</td>
                                         <td>
-                                            <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-file-alt"></i>
+                                            <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-edit"></i>
                                                 Ficha</button>
                                         </td>
                                     </tr>
