Added many changes to lagingpage

--- a/Main/CSS/Landingpage/landingpage.css
+++ b/Main/CSS/Landingpage/landingpage.css
@@ -1,5 +1,5 @@
 html { 
-    background: url(../img/woods.jpg) no-repeat center fixed; 
+    background: url(../../IMG/woods.jpg) no-repeat center fixed; 
     background-size: cover;
   }
 
